--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </div>
                     <div>
                         <h3 class="text-lg font-bold text-yellow-800">11h00 - 14h00</h3>
-                        <p class="text-base text-gray-700">Brunch</p>
+                        <p class="text-base text-gray-700">Brunch : Miami Boulevard</p>
                         <p class="text-sm text-gray-500">Réservé ✅</p>
                     </div>
                 </div>
