--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
                     </div>
                     <div>
                         <h3 class="text-lg font-bold text-yellow-800">11h00 - 14h00</h3>
-                        <p class="text-base text-gray-700">Brunch : Miami Boulevard</p>
+                        <p class="text-base text-gray-700">Brunch</p>
+                        <a href="https://maps.app.goo.gl/dDM8zHbHRHctWvdJ6" target="_blank" class="text-sm text-gray-500 underline hover:text-blue-500">Maimi Boulevard</a>
                         <p class="text-sm text-gray-500">Réservé ✅</p>
                     </div>
                 </div>
@@ -78,8 +79,8 @@
                     </div>
                     <div>
                         <h3 class="text-lg font-bold text-red-800">18h00 - 20h00</h3>
-                        <p class="text-base text-gray-700">Dîner : Flam's Saint-Lazare</p>
-                        <p class="text-sm text-gray-500">Encore à trouver 🤔</p>
+                        <p class="text-base text-gray-700">Dîner : <a href="https://maps.app.goo.gl/YpehY8Uho2KB6cpX6" target="_blank" class="underline hover:text-blue-500">Flam's Saint-Lazare</a></p>
+                        <p class="text-sm text-gray-500">Réservé ✅</p>
                     </div>
                 </div>
 
@@ -93,7 +94,7 @@
                     </div>
                     <div>
                         <h3 class="text-lg font-bold text-purple-800">20h30 - 22h30</h3>
-                        <p class="text-base text-gray-700">Théâtre : ADN</p>
+                        <p class="text-base text-gray-700">Théâtre : <a href="https://www.ticketac.com/spectacles/adn-35087" target="_blank" class="underline hover:text-blue-500">ADN</a></p>
                         <p class="text-sm text-gray-500">Réservé ✅</p>
                     </div>
                 </div>
@@ -109,6 +110,10 @@
                     <div>
                         <h3 class="text-lg font-bold text-green-800">22h30 - 00h00</h3>
                         <p class="text-base text-gray-700">Dernier verre au bar</p>
+                        <p class="text-sm text-gray-500">
+                          <a href="https://maps.app.goo.gl/DrBuSJTuc1pQWnQu8" target="_blank" class="underline hover:text-blue-500">Bar 1</a> / 
+                          <a href="https://maps.app.goo.gl/erH5yhnHPuQG1FkC7" target="_blank" class="underline hover:text-blue-500">Bar 2</a>
+                        </p>
                         <p class="text-sm text-gray-500">À valider 🤔</p>
                     </div>
                 </div>
